# no_communication_0

./: Cargo.toml  LICENSE  readme.md
assets/: neutralized.xmp  space.wgsl  waves.wave.ron
assets/models/: ground.glb  tower.blend1
assets/models/buildings/: tower.blend  tower.glb  tree_spawner.gltf
assets/models/characters/: boss.glb  farmer.gltf  farmer_attack.gltf  farmer_idle.gltf  farmer_run.gltf  fast_robot.gltf  monkey.gltf  robot.gltf
assets/models/foliage/: foliage_0.gltf  foliage_1.gltf  foliage_2.gltf  foliage_3.gltf  foliage_4.gltf  foliage_5.gltf  foliage_6.gltf
assets/models/items/: apple_model.gltf  banana_model.gltf  log_model.gltf
assets/models/projectiles/: .xdp-arrow.gltf-Lfr17a  arrow.blend  arrow.blend1  arrow.gltf
assets/models/trees/: Birch_1.gltf  Birch_2.gltf  Birch_3.gltf  Birch_4.gltf  Birch_5.gltf  Birch_6.gltf  Pine_1.gltf  Pine_2.gltf  Pine_3.gltf  Pine_4.gltf  TreeBell.gltf  TreeDiamond.gltf  TreePine.gltf  TreePink.gltf  TreeRound.gltf  TreeStack.gltf  tree_1.gltf  (+5 more)
assets/projectiles/: bow.projectile.ron  tower.projectile.ron
assets/shaders/: border_material.wgsl  ground_material.wgsl
assets/sounds/: chop.xmp  next-level.xmp  projectile.xmp
docs/: physics.txt
src/: animation_linker.rs  asset_utils.rs  background.rs  border_material.rs  camera.rs  foliage.rs  ground_material.rs  health.rs  inventory.rs  item_pickups.rs  knockback.rs  lib.rs  main.rs  map.rs  notification.rs  pickup.rs  player.rs  pointer.rs  projectile.rs  shop.rs  state.rs  tower.rs  tree.rs  tree_spawner.rs  ui_util.rs  utils.rs  waves.rs  weapon.rs
(+18 files in other folders)
